# config

./: .Xmodmap  .bashrc  .emacs  .gitconfig  .gitignore  .gitmodules  .mailmap  .spacemacs  .tmux.conf  .vimrc  LICENSE.md  README.md  check_distro.sh  configure  configure.ac  docker-compose.yml  install.sh  install_emacs27.sh  setup_libsecret.sh  setup_xterm-256color.sh  uninstall.sh
.config/terminator/: config
.emacs.d/elpa/archives/gnu/: archive-contents.signed
.emacs.d/elpa/gnupg/: pubring.kbx  pubring.kbx~  trustdb.gpg
.vim/: .netrwhist
.vim/bundle/.neobundle/: install_info
.vim/syntax/: python.vim
cscope/: mkcscope.sh
emacs/: .spacemacs  Dockerfile  install_spacemacs.sh  setup_emacs.sh
git/: .gitattributes  Dockerfile
gpgpusim/: gpgpusim_helper.sh
my_spacemacs/: .spacemacs
postgresql/: install_postgresql.sh
script/: setup_bash.sh  setup_emacs.sh  setup_git.sh  setup_vim.sh
shell/: .Xmodmap  .bashrc  .profile  Dockerfile  find_portable_shell.sh  setup_bash.sh  setup_locale.sh  setup_xterm-256color.sh
spacemacs/: .spacemacs  Dockerfile
tibero6/: Dockerfile
tmux/: .tmux.conf
vim/: .vimrc  vimrc.local
