##                                                -*- Autoconf -*-
##  Process this file with autoconf to produce a configure script.
##

AC_PREREQ([2.63])   # autoconf version
#AC_INIT([FULL-PACKAGE-NAME], [VERSION], [BUG-REPORT-ADDRESS])
AC_INIT(config, 1.0, scurry2119@gmail.com)

#AM_INIT_AUTOMAKE(hello, 1.0)
#AC_CONFIG_SRCDIR([hello.c])
#AC_CONFIG_HEADERS([config.h])

# Checks for programs.
#AC_PROG_CC               # C compiler
#AC_PROG_CXX              # C++ compiler
#AC_DEFINE(_GNU_SOURCE)   # GNU package

# Checks for libraries.

# Checks for header files.

# Checks for typedefs, structures, and compiler characteristics.

# Checks for library functions.

#AC_CONFIG_FILES([Makefile])
AC_OUTPUT
